--- a/FrontEnd/FAQ.html
+++ b/FrontEnd/FAQ.html
@@ -19,25 +19,22 @@
 
   <main style="padding: 60px 80px;">
     <h1>FAQs</h1> 
-    <h3>1.How often do you post new content?</h3> 
+    <h3>1.What is this blog web application for?</h3>
+    <p>This is a simple web application that allows users to create, view, and delete blog posts. It's ideal for learning the basics of full-stack development using Node.js, Express.js, EJS, and file-based storage.
+    </p>
+    <h3>2.Can I edit an existing blog post?</h3>
+    <p>Currently, the app supports creating and deleting posts. Editing functionality can be added in future updates.
+    </p>
+    <h3>3.How often do you post new content?</h3> 
     <p>We strive to keep you informed with fresh perspectives and updates by publishingnew articles [specify frequency, e.g., on a consistent bi-weekly schedule, typicallyevery Monday and Thursday]. To ensure you never miss our latest insights, we encourage you to subscribe to our newsletter or follow us on our social media channels for real-timenotifications.
     </p>
-    <h3>2.What's the most efficient way to find the information I'm looking for?</h3> 
+    <h3>4.What's the most efficient way to find the information I'm looking for?</h3> 
     <p>To quickly locate specific topics or keywords, utilize the search bar, usually situated in the top section of our website. Additionally, explore our organized categories, found in the main menu or sidebar, and delve into specific subjects using the relevant tags located at the end of each post or in the sidebar.
     </p>
-    <h3>3.Is it free to use this website?</h3> 
+    <h3>5.Is it free to use this website?</h3> 
     <p>Absolutely! Access to all the valuable content, insightful articles, and engaging resources on our blog is currently provided completely free of charge for all our users. Our primary goal is to share knowledge and foster a thriving community interested in [reiterate the blog's core topic].
     </p>
-    <h3>4.Can I leave comments on the articles?</h3> 
-    <p>Yes, we highly encourage active participation and value your opinions! You are welcome to share your thoughts, ask clarifying questions, and engage in discussions with other readers and our team in the comments section located conveniently at the end of every blog post.
-    </p>
-    <h3>5.How do I leave a comment?</h3> 
-    <p>Simply navigate to the bottom of the article you've read. You'll find a text input area where you can type your comment. You'll typically be prompted to enter your name and email address before clicking the "Post Comment" or a similar button to share your contribution with the community.
-    </p>
-    <h3>6.Do you moderate comments?</h3> 
-    <p>Yes, to maintain a respectful and constructive environment for all our users, we [specify moderation level, e.g., actively review and moderate] the comments section. We aim to remove any content that is spam, offensive, or irrelevant to the topic being discussed to ensure a positive experience for everyone.
-    </p>
-    <h3>7.What kind of content can I expect in your newsletter?</h3> 
+    <h3>6.What kind of content can I expect in your newsletter?</h3> 
     <p>Our newsletter is designed to keep you informed and engaged. You can typically expect to receive brief summaries of our newly published blog posts, direct links to access the full articles, occasional exclusive content or insights not available on the blog, and important announcements or updates related to our community.
     </p>
     </main>
